cursive-bootstrap/tests/ui/E-CON/E-CON-0010.cursive
// RUN: compile-fail
// DIAG: E-CON-0010
// SPEC: 8.9
// DESC: Potential conflict on dynamic indices (same statement)

procedure conflict_indices(arr: shared [i32; 10], i: usize, j: usize) -> () {
    # write arr {
        arr[i] = arr[j]  //~ ERROR E-CON-0010: potential conflict dynamic indices
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
